manifests/infrastructure/mailhog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog
  namespace: storage-messaging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailhog
  template:
    metadata:
      labels:
        app: mailhog
    spec:
      containers:
      - name: mailhog
        image: mailhog/mailhog:v1.0.1
        ports:
        - containerPort: 1025 # Port SMTP (pour recevoir les mails du worker)
        - containerPort: 8025 # Port HTTP (pour l'interface Web)
