manifests/infrastructure/mailhog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailhog
  namespace: storage-messaging
spec:
  selector:
    app: mailhog
  ports:
    - name: smtp
      protocol: TCP
      port: 1025
      targetPort: 1025
    - name: http
      protocol: TCP
      port: 8025
      targetPort: 8025
