manifests/infrastructure/mailhog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailhog-ingress
  namespace: storage-messaging
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # Pour le codespace
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /mailhog
        pathType: Prefix
        backend:
          service:
            name: mailhog
            port:
              number: 8025
